# slug3

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/imfs/: chabrier.toml  chabrier03.toml  kroupa.toml  salpeter.toml  weidner_kroupa06.toml
data/tools/: fetch_bosz.py  fetch_ck04.py  fetch_mist.py  fetch_parsec.py  fetch_parsec_rot.py  fetch_parsec_vms.py  fetch_powr.py  fetch_stromlo.py  fetch_tlusty.py  make_coerce_test_fixture.py  make_coerce_zero_weight_test_fixture.py  make_powr_test_fixture.py
src/: main.cpp
src/core/: Cluster.cpp  Cluster.hpp  SimCluster.cpp  SimCluster.hpp  SimControls.cpp  SimControls.hpp  SimPhysics.cpp  SimPhysics.hpp
src/interpolation/: Interpolator1D.hpp  Mesh2DGrid.cpp  Mesh2DGrid.hpp  Mesh2DInterpolator.cpp  Mesh2DInterpolator.hpp  Mesh3DInterpolator.hpp
src/io/: OutputManager.cpp  OutputManager.hpp  OutputManagerAscii.cpp  OutputManagerAscii.hpp  OutputManagerH5.cpp  OutputManagerH5.hpp  SimControls.cpp  SimControls.hpp  SimPhysics.cpp  SimPhysics.hpp  SlugVersion.hpp.in
src/pdfs/: PDF.hpp  PDFCommons.hpp  PDFDelta.hpp  PDFExponential.hpp  PDFFileParser.cpp  PDFFileParser.hpp  PDFNormal.hpp  PDFPowerlaw.hpp  PDFSchechter.hpp  PDFSegment.cpp  PDFSegment.hpp  PDFSegmentDelta.cpp  PDFSegmentDelta.hpp  PDFSegmentExponential.cpp  PDFSegmentExponential.hpp  PDFSegmentLognormal.cpp  PDFSegmentLognormal.hpp  PDFSegmentNormal.cpp  PDFSegmentNormal.hpp  PDFSegmentPowerlaw.cpp  PDFSegmentPowerlaw.hpp  PDFSegmentSchechter.cpp  PDFSegmentSchechter.hpp
src/pybind/: BindCluster.cpp  BindInterpolator1D.cpp  BindSimPhysics.cpp  BindTracks2D.cpp  BindTracks3D.cpp  Bindings.cpp  Bindings.hpp
src/specsyn/: Specsyn.hpp  SpecsynBlackbody.cpp  SpecsynBlackbody.hpp  SpecsynCommons.hpp  SpecsynLib.cpp  SpecsynLib.hpp  SpecsynLibChained.cpp  SpecsynLibChained.hpp  SpecsynLibNoWind.cpp  SpecsynLibNoWind.hpp  SpecsynLibWR.cpp  SpecsynLibWR.hpp  SpecsynUtils.cpp  SpecsynUtils.hpp  SpectraCommons.hpp  SpectraUtils.cpp  SpectraUtils.hpp
src/tracks/: TrackCommons.hpp  TrackUtils.cpp  TrackUtils.hpp  Tracks2D.cpp  Tracks2D.hpp  Tracks3D.cpp  Tracks3D.hpp
src/utils/: MiscUtils.hpp  PDFIntegrator.hpp  ParseUtils.cpp  ParseUtils.hpp  RngThread.hpp  ThreadVec.hpp  UniqueIDManager.hpp  parseUtils.hpp
tests/: main.cpp  testUtils.hpp
tests/core/: testCluster.cpp  testCluster.hpp  testClusterSpecsynFull.cpp  testClusterSpecsynFull.hpp  testCoreAll.cpp  testSimCluster.cpp  testSimCluster.hpp  testSimControls.cpp  testSimControls.hpp  testSimPhysics.cpp  testSimPhysics.hpp  testSpecsynChain.cpp  testSpecsynChain.hpp
tests/core/assets/: testCluster.in  testClusterFeHDist.toml  testClusterMinStochMass.in  testClusterSpecsynFull.in  testClusterSpecsynFullFeHDist.toml  testControlsExplicit.in  testControlsGalaxyNoClusters.in  testControlsInvalidSimType.in  testControlsNoOutputs.in  testControlsOutputTimeDist.in  testControlsOutputTimesArray.in  testControlsOutputTimesConflict.in  testControlsOutputTimesLog.in  testGalaxy.in
tests/interpolation/: testInterpolationAll.cpp  testInterpolator1D.hpp  testMesh2DGrid.cpp  testMesh2DGrid.hpp  testMesh2DInterpolator.cpp  testMesh2DInterpolator.hpp  testMesh3DInterpolator.cpp  testMesh3DInterpolator.hpp
tests/io/: testIoAll.cpp  testOutputManager.cpp  testOutputManager.hpp  testSimControls.cpp  testSimPhysics.cpp
tests/io/assets/: testControlsExplicit.in  testControlsGalaxy.in  testControlsInvalidOutputMode.in  testControlsOutputTimesPartialRange.in
tests/pdfs/: testPDF.cpp  testPDF.hpp  testPDFAll.cpp  testPDFSegmentDelta.hpp  testPDFSegmentExponential.hpp  testPDFSegmentLognormal.hpp  testPDFSegmentNormal.hpp  testPDFSegmentPowerlaw.cpp  testPDFSegmentPowerlaw.hpp  testPDFSegmentSchechter.cpp  testPDFSegmentSchechter.hpp  test_PDF.hpp  test_PDFDelta.hpp  test_PDFExponential.hpp  test_PDFNormal.hpp  test_PDFPowerlaw.hpp  test_PDFSchechter.hpp  test_PDFSegmentDelta.hpp  test_PDFSegmentExponential.hpp  test_PDFSegmentLognormal.hpp  test_PDFSegmentNormal.hpp  test_PDFSegmentPowerlaw.hpp  test_PDFSegmentSchechter.hpp  test_PDFs.cpp
tests/pdfs/assets/: chabrier_imf.txt  sfh_burst.txt
tests/pybind/: test_bindings.py
tests/specsyn/: testSpecsynAll.cpp  testSpecsynBlackbody.cpp  testSpecsynBlackbody.hpp  testSpecsynLib.cpp  testSpecsynLib.hpp  testSpecsynLibChained.cpp  testSpecsynLibChained.hpp  testSpecsynLibWR.cpp  testSpecsynLibWR.hpp  testSpecsynUtils.cpp  testSpecsynUtils.hpp  testSpectraUtils.cpp  testSpectraUtils.hpp
tests/specsyn/assets/: BOSZ_test.h5  COERCE_ZERO_test.h5  COERCE_test.h5  POWR_WNL_test.h5  POWR_test.h5  TLUSTY_test.h5  spectra.toml
tests/tracks/: testTrackUtils.hpp  testTracks2D.hpp  testTracks3D.hpp  testTracksAll.cpp  trackFieldFixture.hpp
tests/tracks/assets/: MIST_test.h5  tracks.toml
tests/utils/: testPDFIntegrator.cpp  testPDFIntegrator.hpp  testRngThread.hpp  testUniqueIDManager.hpp  testUtilsAll.cpp
